--- a/cdk-workshop/package.json
+++ b/cdk-workshop/package.json
@@ -22,10 +22,12 @@
   },
   "dependencies": {
     "@aws-cdk/aws-apigateway": "^1.125.0",
+    "@aws-cdk/aws-dynamodb": "^1.127.0",
     "@aws-cdk/aws-lambda": "^1.125.0",
     "@aws-cdk/aws-sns": "1.125.0",
     "@aws-cdk/aws-sns-subscriptions": "1.125.0",
     "@aws-cdk/aws-sqs": "1.125.0",
-    "@aws-cdk/core": "1.125.0"
+    "@aws-cdk/core": "1.125.0",
+    "cdk-dynamo-table-viewer": "^0.1.127"
   }
 }
